# PhotoV

./: .gitignore  CLAUDE.md  README.md
backend/: DEV.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py
backend/app/ML/: config.py  data_pipeline.py  feature_engineering.py  inference.py  model_training.py  remote_production_ingestion.py  scheduler.py  train_from_db.py
backend/app/api/: routes_predict.py
backend/app/core/: db_services.py
backend/app/ml/: config.py  data_pipeline.py  feature_engineering.py  inference.py  scheduler.py  test.py
backend/app/schemas/: ml_health.py  prediction.py
backend/app/tasks/: admin.py  pull-history.py  pull.py  pull_history.py  util.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0fa698b0667e_add_smartplug_tables.py  306c166bf56e_initial_revision.py  65483de9daac_add_user_installation_link.py  6b74f9e4fa0b_bridge_missing_revision.py  83e56dec0b17_add_prediction_table.py  8d5cf3f9c223_add_auth_system.py  a7b1c2d3e4f5_merge_heads_for_ml_schema.py  b8c9d0e1f2a3_sync_ml_schema_with_models.py  bb2d9f4f1d5a_convert_timestamps_to_timestamptz.py  c76fb8cb31e0_initial_migration.py  f09934c53fbc_add_installation_id_to_smartplug.py  f80ffeed5b87_migration_ml_setup.py  ff93234e580b_add_missing_unique_constraints.py
backups/: Dockerfile  README.md  backup.sh
data-acquisition/: README.md  credentials.md  get_power.py  print_info.py  pyproject.toml
data-acquisition/service/: acquire.py  config.yaml  config.yaml.example  photov-acquisition.service
data-acquisition/setup/: get_power_test.py  print_info.py
data-acquisition/virtual/: README.md  config.yaml  (+2 more)
frontend/: .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
infra/: .env  .env.example  docker-compose.yml
proxy/: Caddyfile  Dockerfile
(+19 files in other folders)
