[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "httpx>=0.28.1",
    "joblib>=1.4.2",
    "lightgbm>=4.5.0",
    "numpy>=1.26.4",
    "optuna>=3.6.1",
    "pandas>=2.2.2",
    "psycopg[binary]>=3.3.3",
    "pvlib>=0.11.1",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.5.2",
    "skforecast>=0.14.0",
    "solaredge>=1.1.1",
    "sqlmodel>=0.0.37",
    "termcolor>=3.3.0",
    "aiohttp>=3.13.5",
    "nest-asyncio>=1.6.0",
]
